--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <html>
 
+<link rel="stylesheet" href="styles.css">
+
 <head>
     <title>Pacmen</title>
 </head>
 <!-- DO NOT CHANGE THIS LINE OF CODE -->
     <script src="./pacmen.js"></script>
 <body>
+	<div class="box sidebar"> 
+		<h3>Portfolio Projects</h3>
+		<div> <a href="https://amandamhorowitz.github.io/PacMen-Exercise/">PacMan Exercise</a></div>
+		<div> <a href="https://amandamhorowitz.github.io/Bus-Tracking-Exercise/">Bus Tracking Exercise</a></div>
+		<div> <a href="https://amandamhorowitz.github.io/Eye-Exercise/">Eye Exercise</a></div>
+	</div>
     <div id='game'>
         <button onclick='makeOne()' width='200' height='30'>Add PacMan</button>
         <button onclick='update()' width='200' height='30'>Start Game</button>
