--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <!-- DO NOT CHANGE THIS LINE OF CODE -->
     <script src="./pacmen.js"></script>
-<body id="main">
+<body>
 	<div class="box sidebar"> 
 		<h3>Portfolio Projects</h3>
 		<div> <a href="https://amandamhorowitz.github.io/">Portfolio Page</a></div>
