--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <!-- DO NOT CHANGE THIS LINE OF CODE -->
     <script src="./pacmen.js"></script>
-<body>
-	<div class="box sidebar"> 
-		<h3>Portfolio Projects</h3>
-		<div> <a href="https://amandamhorowitz.github.io/">Portfolio Page</a></div>
-	</div>
-	<div class="box content">
-		<div id='game'>
+<body id="main">
+	<div class="wrapper">
+		<div class="box sidebar"> 
+			<h3>Portfolio Projects</h3>
+			<div> <a href="https://amandamhorowitz.github.io/">Portfolio Page</a></div>
+		</div>
+		<div class="box content">
+			<div id='game'>
 			<button onclick='makeOne()' width='200' height='30'>Add PacMan</button>
 			<button onclick='update()' width='200' height='30'>Start Game</button>
 		</div>
